wip(verification): preserve current state before next harness slimdown step